--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2971,8 +2971,8 @@
                                                                 enabled: true,
                                                                 position: basePosition,
                                                                 yAdjust: basePosition === 'top' ? -8 : 8,        // Push further away
-                                                                backgroundColor: 'rgba(0, 140, 0, 0.95)',
-                                                                color: '#ffffff',
+                                                                backgroundColor: 'rgba(0, 140, 0, 0.0)',
+                                                                color: '#008000',
                                                                 font: { size: 11, weight: 'bold', family: 'Arial, sans-serif' },
                                                                 padding: { top: 4, bottom: 4, left: 6, right: 6 },
                                                                 cornerRadius: 5,
