--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2997,8 +2997,8 @@
                                                                 enabled: true,
                                                                 position: endPosition,
                                                                 yAdjust: endPosition === 'top' ? -8 : 8,
-                                                                backgroundColor: 'rgba(180, 0, 0, 0.95)',
-                                                                color: '#ffffff',
+                                                                backgroundColor: 'rgba(180, 0, 0, 0.0)',
+                                                                color: '#B31B1B',
                                                                 font: { size: 11, weight: 'bold', family: 'Arial, sans-serif' },
                                                                 padding: { top: 4, bottom: 4, left: 6, right: 6 },
                                                                 cornerRadius: 5,
