--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3639,6 +3639,8 @@
                                                     <div style="height:8px"></div>
                                                     <strong>Common Moon Windows</strong><br>
                                                     ${windowsHTML}
+                                                    <div style="height:8px"></div>
+                                                    (-1) and (+1) denote previous and next UTC date, respectively
                                                 `;
 
                                                 dxMarker.bindPopup(popupContent);
